--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    /* padding: 0 10%; */
-    background-color: white;
+    background-color: rgb(33, 32, 32);
     z-index: 99;
     position: fixed;
     top: 0;
@@ -27,7 +26,7 @@
 }
 
 .homeIcon {
-    color: #464646;
+    color: white;
     height: 30%;
     cursor: pointer;
     transition-duration: 1s;
@@ -38,7 +37,7 @@
 }
 
 .logoVilleneuve {
-    color: #464646;
+    color: white;
     font-family: 'Din next', sans-serif;
     font-size: 4vh;
     border: none;
