--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -1,83 +1,117 @@
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;400;700&display=swap");
 @font-face {
-    font-family: 'Din next';
-    src: url('/myapp/fonts/din-next-lt-pro-bold-59fa0d5149473.otf') format('opentype');
-    font-weight: bold;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'Din next';
-    src: url('/myapp/fonts/din-next-lt-pro-light-59f9bcb6633e7.otf') format('opentype');
-    font-weight: light;
-    font-style: normal;
-  }
-
-.part1 {
-    background-color: aquamarine;
-    height: 100vh;
-    width: 100vw;
-    padding: 0 10vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  font-family: "Din next";
+  src: url("/myapp/fonts/din-next-lt-pro-bold-59fa0d5149473.otf")
+    format("opentype");
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Din next";
+  src: url("/myapp/fonts/din-next-lt-pro-light-59f9bcb6633e7.otf")
+    format("opentype");
+  font-weight: light;
+  font-style: normal;
 }
 
-.logoTheo {
-    background-color: blueviolet;
-    display: flex;
-    flex-direction: column;
-    height: 100%; 
-    justify-content: center;
-    align-items: center;  
+.part1 {
+  height: 100vh;
+  width: 100vw;
+  padding-top: 12vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.leftContainer {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 3%;
 }
 
 .logoImg {
-    height: 35vw;
-    width: 35vw;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  height: 40vh;
+  width: 40vh;
+  margin: 5vh 0;
+}
+
+.textContainer {
+  height: 20vh;
+  width: 35vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0 5%;
+  margin-bottom: 4vh;
+}
+
+.rightContainer {
+  background-image: url("../public/ink/ink10_LQ.jpeg");
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 70vw;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 40vh;
 }
 
 .btnContainer {
-    background-color: crimson;
-    margin-top: 3vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    margin-bottom: 6vh;
-  }
+  margin-top: 3%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0 22%;
+}
+
+/* BUTTONS */
 
 .btn {
-    background-color: black;
-    width: 14vw;
-    height: 6vh;
-    color: white;
-    border: 1px solid transparent;
-    border-radius: 8px;
-    font-family: 'Din next', sans-serif;
-    font-size: 2vh;
-    font-weight: 500;
-    cursor: pointer;
-    transition-duration: 1s;
-  }
-  
-  .btn:hover {
-    border: 1px solid black;
-    color: black;
-    background-color: transparent;
-  }
+  background-color: white;
+  opacity: 0.7;
+  width: 14vw;
+  height: 6vh;
+  color: black;
+  border: 2px solid black;
+  border-radius: 8px;
+  font-family: "Din next", sans-serif;
+  font-size: 2vh;
+  font-weight: 500;
+  cursor: pointer;
+  transition-duration: 1s;
+}
 
-  .textContainer {
-    background-color: olive;
-    width: 45vw;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;    
-  }
+.btn:hover {
+  border: 2px solid rgb(33, 32, 32);
+  color: white;
+  background-color: rgb(33, 32, 32);
+  opacity: 1;
+}
 
-  #h1 {
-    font-family: 'Din next', sans-serif;
-    font-size: 2vh;
-    font-weight: 500;
+.btn2 {
+  background-color: rgb(33, 32, 32);
+  width: 18vw;
+  height: 7vh;
+  color: white;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  font-family: "Din next", sans-serif;
+  font-size: 2.4vh;
+  font-weight: 500;
+  cursor: pointer;
+  transition-duration: 1s;
+}
 
-  }
+.btn2:hover {
+  border: 1px solid rgb(33, 32, 32);
+  color: black;
+  background-color: transparent;
+}
