--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,17 @@ body {
 * {
   box-sizing: border-box;
 }
+
+h1 {
+  font-family: "Din next", sans-serif;
+  font-size: 3.4vh;
+  font-weight: 800;
+  margin: 0 0 2vh 0;
+}
+
+h2 {
+  font-family: "Din next", sans-serif;
+  font-size: 2.5vh;
+  font-weight: 500;
+  margin: 0 0 1vh 0;
+}
