--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -8,32 +8,7 @@
     top: 0;
     width: 100vw;
     height: 12vh;
-}
-
-.homeBtn {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 10%
-}
-
-.btn {
-    background-color: transparent;
-    border: none;
-    height: 100%;
-}
-
-.homeIcon {
-    color: white;
-    height: 30%;
-    cursor: pointer;
-    transition-duration: 1s;
-}
-
-.homeIcon:hover {
-    opacity: 0.3;
+    padding-left: 7%;
 }
 
 .logoVilleneuve {
@@ -60,3 +35,4 @@
     padding: 0;
     font-weight: 700;
 }
+
