--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -27,29 +27,23 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  justify-content: flex-start;
+  width: 40%;
+  justify-content: flex-end;
   align-items: center;
-  padding: 0 3%;
+  padding: 0 3% 7% 3%;
 }
 
 .logoImg {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
   height: 40vh;
   width: 40vh;
   margin: 5vh 0;
 }
 
 .textContainer {
-  height: 20vh;
-  width: 35vw;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
-  padding: 0 5%;
-  margin-bottom: 4vh;
+  align-items: center;
 }
 
 .rightContainer {
@@ -58,16 +52,17 @@
   flex-direction: column;
   height: 100%;
   width: 70vw;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
-  padding-top: 40vh;
+  padding-bottom: 10%;
+  padding-right: 6%;
 }
 
 .btnContainer {
-  margin-top: 3%;
+  margin-top: 6%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
   padding: 0 22%;
 }
@@ -77,16 +72,8 @@
 .btn {
   background-color: white;
   opacity: 0.7;
-  width: 14vw;
-  height: 6vh;
   color: black;
-  border: 2px solid black;
-  border-radius: 8px;
-  font-family: "Din next", sans-serif;
-  font-size: 2vh;
-  font-weight: 500;
-  cursor: pointer;
-  transition-duration: 1s;
+  border: 0.5px solid rgb(33, 32, 32);
 }
 
 .btn:hover {
@@ -107,7 +94,7 @@
   font-size: 2.4vh;
   font-weight: 500;
   cursor: pointer;
-  transition-duration: 1s;
+  transition-duration: 0.8s;
 }
 
 .btn2:hover {
