--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -1,19 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;400;700&display=swap");
-@font-face {
-  font-family: "Din next";
-  src: url("/myapp/fonts/din-next-lt-pro-bold-59fa0d5149473.otf")
-    format("opentype");
-  font-weight: bold;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Din next";
-  src: url("/myapp/fonts/din-next-lt-pro-light-59f9bcb6633e7.otf")
-    format("opentype");
-  font-weight: light;
-  font-style: normal;
-} */
-
 .part1 {
   height: 100vh;
   width: 100vw;
@@ -47,7 +31,7 @@
 }
 
 .rightContainer {
-  background-image: url('../public/ink/ink7_LQ.jpeg');
+  background-image: url('../public/ink/ink5_LQ.jpeg');
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -90,7 +74,7 @@
   color: white;
   border: 1px solid transparent;
   border-radius: 8px;
-  font-family: "Din next", sans-serif;
+  font-family: "Din next light", sans-serif;
   font-size: 2.4vh;
   font-weight: 500;
   cursor: pointer;
