--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;400;700&display=swap');
 @font-face {
-  font-family: 'Din next';
-  src: url('/myapp/fonts/din-next-lt-pro-bold-59fa0d5149473.otf') format('opentype');
+  font-family: 'Din next bold';
+  src: url('/fonts/din-next-lt-pro-bold-59fa0d5149473.otf') format('opentype');
   font-weight: bold;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Din next';
-  src: url('/myapp/fonts/din-next-lt-pro-light-59f9bcb6633e7.otf') format('opentype');
+  font-family: 'Din next light';
+  src: url('/fonts/din-next-lt-pro-light-59f9bcb6633e7.otf') format('opentype');
   font-weight: light;
   font-style: normal;
 }
@@ -16,7 +16,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Din next light, sans-serif;
 }
 
 * {
@@ -24,28 +24,28 @@ body {
 }
 
 h1 {
-  font-family: "Din next", sans-serif;
+  font-family: "Din next light", sans-serif;
   font-size: 3.2vh;
   font-weight: 600;
   margin: 0 0 2vh 0;
 }
 
 h2 {
-  font-family: "Din next", sans-serif;
+  font-family: "Din next light", sans-serif;
   font-size: 2.3vh;
   font-weight: 600;
   margin: 0;
 }
 
 h3 {
-  font-family: "Din next", sans-serif;
+  font-family: "Din next light", sans-serif;
   font-size: 3.4vh;
   font-weight: 300;
   margin-top: 2vh;
 }
 
 p {
-  font-family: "Din next", sans-serif;
+  font-family: "Din next light", sans-serif;
   font-size: 2.3vh;
   font-weight: 400;
   margin: 0;
@@ -56,7 +56,7 @@ button {
   width: 14vw;
   height: 6vh;
   border-radius: 8px;
-  font-family: "Din next", sans-serif;
+  font-family: "Din next light", sans-serif;
   font-size: 2vh;
   font-weight: 500;
   cursor: pointer;
