--- a/styles/Collections.module.css
+++ b/styles/Collections.module.css
@@ -1,4 +1,4 @@
-.webPortfolio {
+.background {
   background-image: url("../public/ink/ink7_LQ.jpeg");
   background-size: cover;
   width: 100vw;
@@ -7,32 +7,41 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  padding-top: 5%;
+  padding-bottom: 1%;
+}
+
+.titleContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .btnContainer {
+  bottom: 600px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 50vw;
-  margin-bottom: 70vh;
+  width: 50%;
 }
 
+/* BUTTONS */
+
 .btn {
-  background-color: transparent;
-  color: rgb(181, 181, 181);
-  border: 1px solid transparent;
-  border-radius: 8px;
-  cursor: pointer;
-  transition-duration: 1s;
+  background-color: white;
+  opacity: 0.7;
+  color: black;
+  border: 0.5px solid rgb(33, 32, 32);
 }
 
 .btn:hover {
-  border: 1px solid rgb(181, 181, 181);
-  color: rgb(83, 83, 83);
+  border: 2px solid rgb(33, 32, 32);
+  color: white;
+  background-color: rgb(33, 32, 32);
+  opacity: 1;
 }
 
 .logoVilleneuve {
-  margin-top: 10vh;
   color: white;
   font-family: 'Din next', sans-serif;
   font-size: 7vh;
@@ -58,10 +67,6 @@
   font-weight: 700;
 }
 
-.title {
-  color: white;
-  margin-bottom: 70vh;
-}
 
 /* Affichage conditionné à la taille d'écran */
 @media screen and (max-width: 768px) {
