--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -1,4 +1,4 @@
-.webPortfolio {
+.background {
   background-color: rgb(33, 32, 32);
   width: 100vw;
   height: 100vh;
@@ -6,44 +6,44 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  padding-top: 5%;
+  padding-bottom: 1%;
+}
+
+.titleContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.btnContainer {
+  bottom: 600px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 50%;
+}
+
+/* BUTTONS */
+
+.btn {
+  background-color: white;
+  opacity: 0.7;
+  color: black;
+  border: 0.5px solid rgb(33, 32, 32);
+}
+
+.btn:hover {
+  border: 2px solid rgb(33, 32, 32);
+  color: white;
+  background-color: rgb(33, 32, 32);
+  opacity: 1;
 }
 
 .logoVilleneuve {
-  margin-top: 10vh;
   color: white;
-  font-family: 'Din next', sans-serif;
   font-size: 7vh;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  border: none;
   cursor: pointer;
-  transition-duration: 1s;
-}
-
-.theo {
-  margin: 0;
-  padding: 0;
-  font-weight: 200;
-}
-
-.villeneuve {
-  margin: 0;
-  padding: 0;
-  font-size: 7vh;
-  font-weight: 700;
-}
-
-.title {
-  color: white;
-  margin-bottom: 70vh;
-}
-
-.project {
-    background-color: brown;
-    width: 100vw;
-    
 }
 
 /* Affichage conditionné à la taille d'écran */
